# CPPNN

./: CMakeLists.txt
include/: library.cuh  library.hpp  neuralnetwork.cuh  neuralnetwork.hpp  shared.hpp  unittests.cuh
src/: dataloader.cpp  io.cpp  library.cpp  library.cu  logging.cpp  main.cpp  main.cu  neuralnetwork.cpp  neuralnetwork.cu  reinforcement.cu  stringtech.cpp  textlearn.cu  unittests.cu
src/Implementations/: ChatBot.cu  PPOGridWorld.cu
src/old/: OLDNN.cu  OLDTEXTLEARN.cu
